made canvas look fancy

--- a/Root/index.html
+++ b/Root/index.html
@@ -9,4 +9,5 @@
     <h1>aw yeah baby</h1>
     <canvas width=1280 height=720 id="game-canvas" style="border:5px solid"></canvas>
   </body>
+  <script src="javascript.js"></script>
 </html>
