made a square that will eventually become the player

--- a/Root/index.html
+++ b/Root/index.html
@@ -10,4 +10,5 @@
     <canvas width=1280 height=720 id="game-canvas" style="border:5px solid"></canvas>
   </body>
   <script src="javascript.js"></script>
+  <script src="Elements/Rattigan/spawn.js"></script>
 </html>
