--- a/Root/index.html
+++ b/Root/index.html
@@ -11,4 +11,5 @@
   </body>
   <script src="javascript.js"></script>
   <script src="Elements/Rattigan/spawn.js"></script>
+  <script src="Arena/arena.js"></script>
 </html>
