here i fixed the problem i had

--- a/Root/index.html
+++ b/Root/index.html
@@ -9,6 +9,7 @@
     <h1>aw yeah baby</h1>
     <canvas width=1280 height=720 id="game-canvas" style="border:5px solid"></canvas>
   </body>
+  <script src="Elements/Enemies/amogus/spawn.js"></script>
   <script src="Elements/Enemies/GoombaCat/spawn.js"></script>
   <script src="Elements/Rattigan/spawn.js"></script>
   <script src="Arena/arena.js"></script>
