--- a/Root/index.html
+++ b/Root/index.html
@@ -9,6 +9,9 @@
     <h1>aw yeah baby</h1>
     <canvas width=1280 height=720 id="game-canvas" style="border:5px solid"></canvas>
   </body>
+  <div class="Characters">
+    <img class="Spritesheet pixelart" src="Elements/Assets/spritesheet1.png" alt="Character" />
+  </div>
   <script src="Elements/Enemies/amogus/spawn.js"></script>
   <script src="Elements/Enemies/GoombaCat/spawn.js"></script>
   <script src="Elements/Rattigan/spawn.js"></script>
