nothing is broken but it doesnt work

--- a/Root/index.html
+++ b/Root/index.html
@@ -17,4 +17,5 @@
   <script src="Elements/Rattigan/spawn.js"></script>
   <script src="Arena/arena.js"></script>
   <script src="javascript.js"></script>
+  <script src="collission.js"></script>
 </html>
