--- a/Root/index.html
+++ b/Root/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>aw yeah baby</h1>
-    <canvas width=1280 height=720 id="game-canvas" style="border:5px solid"></canvas>
+    <canvas width=1280 height=720 id="game-canvas" style="border:8px solid; color: blue"></canvas>
   </body>
   <div class="Characters">
     <img class="Spritesheet pixelart" src="Elements/Assets/spritesheet1.png" alt="Character" />
