--- a/Root/index.html
+++ b/Root/index.html
@@ -25,7 +25,7 @@
   var currentx = getComputedStyle(r).getPropertyValue('--pos-x'); // now have inital x & y
   var currenty = getComputedStyle(r).getPropertyValue('--pos-y');
   var friction = 0.4;
-  var gravity = 1;
+  var gravity = 2;
   var maxspeed = 10;
   var active = true;
   var upKey;
@@ -83,8 +83,8 @@
           currenty = makemove(currenty, spriteyspeed);
           r.style.setProperty('--pos-y', currenty);
         }
-        spriteJump = true;
       }
+      spriteJump = true;  1
     }
   }
 
