--- a/Root/index.html
+++ b/Root/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>aw yeah baby</h1>
+    <h1 style="color: red; font-size: 30px; font-family: sans-serif;">aw yeah baby</h1>
     <canvas width=1280 height=720 id="game-canvas" style="border:8px solid; color: blue"></canvas>
   </body>
   <script src="Elements/Enemies/amogus/spawn.js"></script>
