platforms/pipes/pow block,no enemies

--- a/Root/index.html
+++ b/Root/index.html
@@ -14,5 +14,7 @@
   <script src="Elements/Rattigan/spawn.js"></script>
   <script src="javascript.js"></script>
   <script src="Elements/Rattigan/spritemovement.js"></script>
+  <script src="Elements/Enemies/amogus/movement.js"></script>
+  
   <script src="Arena/arena.js"></script>
 </html>
